force-app/main/default/objects/Reconcile__c/Reconcile__c.object-meta.xml
<CustomObject>
    <label>Reconcile</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Reconcile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconcile</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>