force-app/main/default/objects/Reconcile__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>APPROVAL_STATUS</valueSetName>
    </valueSet>
</CustomField>