force-app/main/default/objects/Reconcile__c/fields/DiscrepancyType__c.field-meta.xml
<CustomField>
    <fullName>DiscrepancyType__c</fullName>
    <formula>text( DiscrepancyID__r.DiscrepancyType_del__c )</formula>
    <label>Discrepancy Type</label>
    <type>Text</type>
</CustomField>