force-app/main/default/objects/Reconcile__c/fields/ProductScopeID__c.field-meta.xml
<CustomField>
    <fullName>ProductScopeID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Scope ID</label>
    <referenceTo>AuditItem__c</referenceTo>
    <relationshipLabel>RECONCILE</relationshipLabel>
    <relationshipName>Reconcile</relationshipName>
    <type>Lookup</type>
</CustomField>