force-app/main/default/objects/Reconcile__c/fields/ReconcileActionPlan__c.field-meta.xml
<CustomField>
    <fullName>ReconcileActionPlan__c</fullName>
    <label>Reconcile Action Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>