force-app/main/default/objects/Reconcile__c/fields/ReconcileQuantity__c.field-meta.xml
<CustomField>
    <fullName>ReconcileQuantity__c</fullName>
    <label>Reconcile Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>