force-app/main/default/objects/Reconcile__c/recordTypes/CargoBaseReconcile.recordType-meta.xml
<RecordType>
    <fullName>CargoBaseReconcile</fullName>
    <active>true</active>
    <label>Cargo Base Reconcile</label>
</RecordType>