force-app/main/default/objects/Reconcile__c/recordTypes/ProductBaseReconcile.recordType-meta.xml
<RecordType>
    <fullName>ProductBaseReconcile</fullName>
    <active>true</active>
    <label>Product Base Reconcile</label>
</RecordType>