force-app/main/default/objects/Reconcile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>AuditID__c</columns>
    <columns>ProductScopeID__c</columns>
    <columns>DiscrepancyID__c</columns>
    <columns>ReconcileActionType__c</columns>
    <columns>ReconcileActionPlan__c</columns>
    <columns>ReconcilePIC__c</columns>
    <columns>ReconcileTargetDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>